--- a/src/AdminSettings.API/Dockerfile
+++ b/src/AdminSettings.API/Dockerfile
@@ -1,27 +1,23 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-# ✅ Přidej mysql-client do base imagu
-RUN apt-get update && apt-get install -y default-mysql-client
-
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-
-COPY ["src/AdminSettings.API/AdminSettings.API.csproj", "src/AdminSettings.API/"]
-COPY ["libs/ReservationSystem.Shared/ReservationSystem.Shared.csproj", "libs/ReservationSystem.Shared/"]
-RUN dotnet restore "src/AdminSettings.API/AdminSettings.API.csproj"
+COPY ["src/SystemSettings/SystemSettings.csproj", "src/SystemSettings/"]
+RUN dotnet restore "src/SystemSettings/SystemSettings.csproj"
 COPY . .
-WORKDIR "/src/src/AdminSettings.API"
-RUN dotnet build "AdminSettings.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/src/SystemSettings"
+RUN dotnet build "SystemSettings.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "AdminSettings.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "SystemSettings.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "AdminSettings.API.dll"]
+ENTRYPOINT ["dotnet", "SystemSettings.dll"]
