Add API for audit log

--- a/src/AdminSettings.API/appsettings.json
+++ b/src/AdminSettings.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+  "DefaultConnection": "Server=;Database=;;MultipleActiveResultSets=true"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
