--- a/src/AdminSettings.API/Dockerfile
+++ b/src/AdminSettings.API/Dockerfile
@@ -7,17 +7,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/SystemSettings/SystemSettings.csproj", "src/SystemSettings/"]
-RUN dotnet restore "src/SystemSettings/SystemSettings.csproj"
+COPY ["src/AdminSettings.API/AdminSettings.API.csproj", "src/AdminSettings.API/"]
+RUN dotnet restore "src/AdminSettings.API/AdminSettings.API.csproj"
 COPY . .
-WORKDIR "/src/src/SystemSettings"
-RUN dotnet build "SystemSettings.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/src/AdminSettings.API"
+RUN dotnet build "AdminSettings.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "SystemSettings.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "AdminSettings.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "SystemSettings.dll"]
+ENTRYPOINT ["dotnet", "AdminSettings.API.dll"]
