--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,20 +20,17 @@ services:
       dockerfile: src/AdminSettings.API/Dockerfile
     container_name: admin-settings
     ports:
-      - "8080:8080"
+      - "5026:8080"
     environment:
-      - ConnectionStrings__DefaultConnection=Server=mysql;Port=3306;Database=admin_db;User=root;Password=password123;
+      - ConnectionStrings__DefaultConnection=Server=mysql;Port=3306;Database=admin_db;User=root;Password=root;
     depends_on:
       mysql:
         condition: service_healthy
     networks:
       - backend
-    volumes:
-      - ./backups:/backups
-  
-  
-  
-  
+
+
+
   auth-service:
     build:
       context: .
@@ -57,7 +54,7 @@ services:
     ports:
       - "5189:5189"
     environment:
-      - ConnectionStrings__DefaultConnection=Server=mysql;Port=3306;Database=userdb;User=root;Password=password123;
+      - ConnectionStrings__DefaultConnection=Server=mysql;Port=3306;Database=userdb;User=root;Password=yourpassword;
     depends_on:
       mysql:
         condition: service_healthy
@@ -75,9 +72,7 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./mysql-init:/docker-entrypoint-initdb.d
-      - ./backups:/backups
-
+      - ./mysql-init:/docker-entrypoint-initdb.d 
     networks:
       - backend
     healthcheck:
@@ -88,7 +83,6 @@ services:
 
 volumes:
   mysql_data:
-  mysql_backups:
 
 networks:
   backend:
