fix ports issue

--- a/src/AdminSettings.API/appsettings.json
+++ b/src/AdminSettings.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=db;User=root;Password=root"
+    "DefaultConnection": "Server=mysql;Port=3306;Database=admin_db;User=root;Password=password123;"
   },
   "Logging": {
     "LogLevel": {
