--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
       dockerfile: src/AdminSettings.API/Dockerfile
     container_name: admin-settings
     ports:
-      - "5026:8080"
+      - "8080:8080"
     environment:
-      - ConnectionStrings__DefaultConnection=Server=mysql;Port=3306;Database=admin_db;User=root;Password=root;
+      - ConnectionStrings__DefaultConnection=Server=mysql;Port=3306;Database=admin_db;User=root;Password=password123;
     depends_on:
       mysql:
         condition: service_healthy
