--- a/src/AdminSettings.API/appsettings.Development.json
+++ b/src/AdminSettings.API/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;Database=admin_db;User=root;Password=password123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
