--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
     ports:
       - "5189:5189"
     environment:
-      - ConnectionStrings__DefaultConnection=Server=mysql;Port=3306;Database=userdb;User=root;Password=yourpassword;
+      - ConnectionStrings__DefaultConnection=Server=mysql;Port=3306;Database=userdb;User=root;Password=password123;
     depends_on:
       mysql:
         condition: service_healthy
