--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,6 +101,20 @@ services:
       retries: 5
       timeout: 5s
 
+  angular-frontend:
+    build: 
+      context: ./src/AngularProject
+      dockerfile: Dockerfile
+    container_name: angular-frontend
+    ports:
+      - "4201:8011"
+    networks:
+      - backend
+    depends_on:
+      - auth-service
+      - user-service
+      - notification-service
+
 volumes:
   mysql_data:
 
