--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,9 +28,12 @@ services:
         condition: service_healthy
     networks:
       - backend
-
-
-
+    volumes:
+      - ./backups:/backups
+  
+  
+  
+  
   auth-service:
     build:
       context: .
@@ -72,7 +75,9 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./mysql-init:/docker-entrypoint-initdb.d 
+      - ./mysql-init:/docker-entrypoint-initdb.d
+      - ./backups:/backups
+
     networks:
       - backend
     healthcheck:
@@ -83,6 +88,7 @@ services:
 
 volumes:
   mysql_data:
+  mysql_backups:
 
 networks:
   backend:
