--- a/src/AdminSettings.API/Dockerfile
+++ b/src/AdminSettings.API/Dockerfile
@@ -3,20 +3,17 @@ WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+# ✅ Přidej mysql-client do base imagu
+RUN apt-get update && apt-get install -y default-mysql-client
+
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-# ✅ Copy csproj soubory
 COPY ["src/AdminSettings.API/AdminSettings.API.csproj", "src/AdminSettings.API/"]
 COPY ["libs/ReservationSystem.Shared/ReservationSystem.Shared.csproj", "libs/ReservationSystem.Shared/"]
-
-# ✅ Restore
 RUN dotnet restore "src/AdminSettings.API/AdminSettings.API.csproj"
-
-# ✅ Copy zbytek
 COPY . .
-
 WORKDIR "/src/src/AdminSettings.API"
 RUN dotnet build "AdminSettings.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
