--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,4 +1,4 @@
-name: Build and test
+name: 'Build and test'
 
 on:
   push:
@@ -31,6 +31,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal --results-directory TestOutput --logger "trx;logfilename=${{ matrix.os }}-${{ matrix.dotnet-version }}.trx"
     - name: Upload test results
       uses: actions/upload-artifact@v4
+      if: success() || failure()
       with:
         name: test-results-${{ matrix.os }}-${{ matrix.dotnet-version }}
         path: TestOutput/${{ matrix.os }}-${{ matrix.dotnet-version }}.trx
