--- a/.github/workflows/image-publish.yml
+++ b/.github/workflows/image-publish.yml
@@ -3,8 +3,11 @@ on:
   push:
     branches:
       - 'main'
+    tags:
+      - '*'
 jobs:
   push_image:
+    environment: 'Development'
     strategy:
       matrix:
         include:
