--- a/.github/workflows/image-publish.yml
+++ b/.github/workflows/image-publish.yml
@@ -29,7 +29,7 @@ jobs:
       - name: ACR Login
         uses: docker/login-action@v3
         with:
-          registry: ${{ secrets.AZURE_URL }}
+          registry: ${{ secrets.ACR_URL }}
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
       - name: Build and push
