Change smtp to own public

--- a/src/NotificationService.API/appsettings.json
+++ b/src/NotificationService.API/appsettings.json
@@ -1,9 +1,11 @@
 {
     "SmtpSettings": {
-        "Host": "smtp.utb.cz",
+        "Host": "smtp.seznam.cz",
         "Port": 25, 
         "EnableSsl": false,
-        "From": "gym_testing_project@utb.cz"
+        "Username" : "gym@polisenskydaniel.cz",
+        "Password": "ztwgretFdfdsa03",
+        "From": "gym@polisenskydaniel.cz"
     },
     "ConnectionStrings": {
         "DefaultConnection": "Server=mysql;Port=3306;Database=notification_db;User=root;Password=password123"
