--- a/src/PaymentService.API/appsettings.json
+++ b/src/PaymentService.API/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Port=3306;Database=payment_db;User=root;Password=password123"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mysql;Port=3306;Database=payment_db;User=root;Password=password123" //localhost
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
