--- a/src/AngularProject/Dockerfile
+++ b/src/AngularProject/Dockerfile
@@ -1,27 +1,32 @@
-FROM node:20-alpine AS build
+# Stage 1: Build the Angular app
+FROM node:20 AS build
 WORKDIR /app
-# Kopírování souborů pro instalaci závislostí
+
+# Copy package.json and package-lock.json
 COPY package*.json ./
 RUN npm install
-# Kopírování zbytku kódu
-COPY . .
-# Sestavení Angular aplikace
-# RUN CI=false npm run build || echo "Build errors were ignored"
-RUN npm run build
-# Vypsat obsah dist adresáře pro kontrolu
-RUN ls -la dist/
 
-# Produkční image založený na Nginx
-FROM nginx:alpine AS final
-# Kopírování sestavené aplikace do nginx - upravená cesta
-COPY --from=build /app/dist/client-app /usr/share/nginx/html/client-app
-RUN chmod -R 755 /usr/share/nginx/html && \
-    chown -R nginx:nginx /usr/share/nginx/html
-# Zkontrolovat obsah webového adresáře
-RUN ls -la /usr/share/nginx/html/
-# Kopírování vlastní Nginx konfigurace
+# Copy the rest of the application code
+COPY . .
+
+# Build the application
+RUN npm run build
+
+# Stage 2: Serve the app with Nginx
+FROM nginx:alpine
+WORKDIR /usr/share/nginx/html
+
+# Remove default nginx content
+RUN rm -rf ./*
+
+# Copy the built Angular app
+COPY --from=build /app/dist/client-app /usr/share/nginx/html
+
+# Copy custom nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-# Exponování portu pro komunikaci
+
+# Expose port 8011 as specified in nginx.conf
 EXPOSE 8011
-# Spuštění Nginx serveru
+
+# Start Nginx server
 CMD ["nginx", "-g", "daemon off;"]
