--- a/src/AdminSettings.API/AdminSettings.API.csproj
+++ b/src/AdminSettings.API/AdminSettings.API.csproj
@@ -32,4 +32,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\libs\ReservationSystem.Shared\ReservationSystem.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
