--- a/src/AngularProject/nginx.conf
+++ b/src/AngularProject/nginx.conf
@@ -2,26 +2,16 @@ server {
     listen 8011;
     server_name localhost;
 
-    # Root directory set to include the browser folder
-    root /usr/share/nginx/html;
+    # Nastavení kořenového adresáře na client-app složku
+    root /usr/share/nginx/html/client-app/browser;
     index index.html;
 
-    # Support for Angular routing
+    # Podpora pro Angular routing
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # CORS headers for API requests
-    location /api {
-        proxy_pass http://backend-service;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-        add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-    }
-
-    # Logging for debugging
+    # Logování pro debugging
     error_log /var/log/nginx/error.log debug;
     access_log /var/log/nginx/access.log;
 }
