--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,21 @@ services:
         condition: service_healthy
     networks:
       - backend
+    
+  payment-service:
+    build:
+      context: .
+      dockerfile: src/PaymentService.API/Dockerfile
+    container_name: payment-service
+    ports:
+      - "5185:5185"
+    environment:
+      - ConnectionStrings__DefaultConnection=Server=mysql;Port=3306;Database=payment_db;User=root;Password=password123;
+    depends_on:
+      mysql:
+        condition: service_healthy
+    networks:
+      - backend
 
 
   mysql:
