--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,10 +71,13 @@ services:
       context: .
       dockerfile: src/NotificationService.API/Dockerfile
     container_name: notification-service
+    env_file:
+      - src/NotificationService.API/.env
     ports:
       - "5181:5181"
     environment:
       - ConnectionStrings__DefaultConnection=Server=mysql;Port=3306;Database=notification_db;User=root;Password=password123;
+
     depends_on:
       mysql:
         condition: service_healthy
