--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,21 @@ services:
     networks:
       - backend
 
+  analytics-service:
+     build:
+       context: .
+       dockerfile: src/AnalyticsService.API/Analytics/Dockerfile
+     container_name: analytics-service
+     ports:
+       - "8006:8006"
+     environment:
+       - ConnectionStrings__DefaultConnection=Server=mysql;Port=3306;Database=analytics_db;User=root;Password=password123;
+     depends_on:
+       mysql:
+         condition: service_healthy
+     networks:
+       - backend
+       
 
   mysql:
     image: mysql:latest
@@ -145,7 +160,7 @@ services:
       - booking-service
       - admin-settings
       - notification-service
-
+      - analytics-service
 volumes:
   mysql_data:
 
