Commit deployment auth fail

--- a/src/fitness-admin-dashboard/nginx.conf
+++ b/src/fitness-admin-dashboard/nginx.conf
@@ -13,34 +13,34 @@ server {
 
     location /auth-api/ {
         rewrite ^/auth-api/(.*)$ /api/$1 break;
-        proxy_pass http://auth-service:8005/;
+        proxy_pass https://authservice.internal.thankfulflower-27b66160.polandcentral.azurecontainerapps.io/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /api/ {
-        proxy_pass http://user-service:5189;
+        proxy_pass https://userservice.thankfulflower-27b66160.polandcentral.azurecontainerapps.io/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /booking-api/ {
         rewrite ^/booking-api/(.*)$ /$1 break;
-        proxy_pass http://booking-service:8080/;
+        proxy_pass https://bookingservice.thankfulflower-27b66160.polandcentral.azurecontainerapps.io/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /admin-api/ {
         rewrite ^/admin-api/(.*)$ /api/$1 break;
-        proxy_pass http://admin-settings:9090/;
+        proxy_pass https://adminservice.thankfulflower-27b66160.polandcentral.azurecontainerapps.io/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /notification-api/ {
         rewrite ^/notification-api/(.*)$ /api/$1 break;
-        proxy_pass http://notification-service:5181/;
+        proxy_pass https://notificationservice.thankfulflower-27b66160.polandcentral.azurecontainerapps.io/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
