--- a/src/fitness-admin-dashboard/nginx.conf
+++ b/src/fitness-admin-dashboard/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    resolver 127.0.0.11 valid=10s;
+    #resolver 127.0.0.11 valid=10s;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -13,7 +13,7 @@ server {
 
     location /auth-api/ {
         rewrite ^/auth-api/(.*)$ /api/$1 break;
-        proxy_pass https://authservice.internal.thankfulflower-27b66160.polandcentral.azurecontainerapps.io/;
+        proxy_pass https://authservice.thankfulflower-27b66160.polandcentral.azurecontainerapps.io/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
