new pass 4 SmtpSettings

--- a/src/NotificationService.API/appsettings.json
+++ b/src/NotificationService.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+    "SmtpSettings": {
+        "Host": "smtp.seznam.cz",
+        "Port": 25, 
+        "EnableSsl": false,
+        "Username" : "gym@polisenskydaniel.cz",
+        "Password": "ztwgfdsfdsfrefsdfdstFdfdsaDSAD03",
+        "From": "gym@polisenskydaniel.cz"
+    },
     "ConnectionStrings": {
         "DefaultConnection": "Server=mysql;Port=3306;Database=notification_db;User=root;Password=password123"
     },
