--- a/src/NotificationService.API/appsettings.json
+++ b/src/NotificationService.API/appsettings.json
@@ -4,7 +4,7 @@
         "Port": 25, 
         "EnableSsl": false,
         "Username" : "gym@polisenskydaniel.cz",
-        "Password": "ztwgretFdfdsaDSAD03",
+        "Password": "ztwgfdsfdsfrefsdfdstFdfdsaDSAD03",
         "From": "gym@polisenskydaniel.cz"
     },
     "ConnectionStrings": {
