--- a/src/NotificationService.API/appsettings.json
+++ b/src/NotificationService.API/appsettings.json
@@ -2,6 +2,9 @@
     "ConnectionStrings": {
         "DefaultConnection": "Server=mysql;Port=3306;Database=notification_db;User=root;Password=password123"
     },
+    "Hosts": {
+        "AppUIDomain": "http://localhost:4201"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
