--- a/src/NotificationService.API/appsettings.json
+++ b/src/NotificationService.API/appsettings.json
@@ -3,7 +3,9 @@
         "DefaultConnection": "Server=mysql;Port=3306;Database=notification_db;User=root;Password=password123"
     },
     "Hosts": {
-        "AppUIDomain": "http://localhost:4201"
+        "AppUIDomain": "http://localhost:4201",
+        "Booking": "http://host.docker.internal:8080",
+        "Services": "http://host.docker.internal:8080"
     },
     "Logging": {
         "LogLevel": {
