--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # Ignore .env file for SMTP configuration
 src/NotificationService.API/.env
 
+
+
+#env for services angular frontend
+src/environments/environment.ts
+src/environments/environment.prod.ts
+
+
 # Ignore build and output directories
 bin/
 obj/
