added cors origins dynamic adding

--- a/src/BookingService.API/appsettings.json
+++ b/src/BookingService.API/appsettings.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:4200",
+      "http://localhost:4201"
+    ]
+  },
   "AllowedHosts": "*",
   
   "ConnectionStrings": {
