Add cors for Angular

--- a/src/NotificationService.API/appsettings.json
+++ b/src/NotificationService.API/appsettings.json
@@ -1,4 +1,10 @@
 {
+    "Cors": {
+        "AllowedOrigins": [
+            "http://localhost:4200",
+            "http://localhost:4201"
+        ]
+    },
     "ConnectionStrings": {
         "DefaultConnection": "Server=mysql;Port=3306;Database=notification_db;User=root;Password=password123"
     },
