--- a/src/PaymentService.API/appsettings.json
+++ b/src/PaymentService.API/appsettings.json
@@ -2,11 +2,17 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=mysql;Port=3306;Database=payment_db;User=root;Password=password123" //localhost
   },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:4200",
+      "http://localhost:4201"
+    ]
+  }
 }
