--- a/src/PaymentService.API/appsettings.json
+++ b/src/PaymentService.API/appsettings.json
@@ -1,18 +1,18 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=mysql;Port=3306;Database=payment_db;User=root;Password=password123" //localhost
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=mysql;Port=3306;Database=payment_db;User=root;Password=password123"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Cors": {
+        "AllowedOrigins": [
+            "http://localhost:4200",
+            "http://localhost:4201"
+        ]
     }
-  },
-  "AllowedHosts": "*",
-  "Cors": {
-    "AllowedOrigins": [
-      "http://localhost:4200",
-      "http://localhost:4201"
-    ]
-  }
 }
