--- a/.github/workflows/image-publish.yml
+++ b/.github/workflows/image-publish.yml
@@ -65,7 +65,7 @@ jobs:
           password: ${{ secrets.ACR_PASSWORD }}
       - name: Patch env for frontend
         if: ${{ matrix.image }} == 'angularproject'
-        run: echo ${{ secrets.ANGULAR_ENV }} > src/AngularProject/src/enviroments/enviroment.ts
+        run: echo "${{ secrets.ANGULAR_ENV }}" > src/AngularProject/src/enviroments/enviroment.ts
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
