Testing deployment env

--- a/src/AngularProject/angular.json
+++ b/src/AngularProject/angular.json
@@ -37,6 +37,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/enviroments/environment.ts",
+                  "with": "src/enviroments/environment.dev-deployment.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
