--- a/src/AnalyticsService.API/Analytics/appsettings.Development.json
+++ b/src/AnalyticsService.API/Analytics/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ExternalServices": {
+    "UserService": {
+      "BaseUrl": "http://localhost",
+      "Port": "5189",
+      "UsersEndpoint": "/api/users"
+    }
   }
 }
