--- a/src/AnalyticsService.API/Analytics/appsettings.json
+++ b/src/AnalyticsService.API/Analytics/appsettings.json
@@ -14,5 +14,12 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=mysql;Port=3306;Database=analytics_db;User=root;Password=password123;"
+    },
+    "ExternalServices": {
+        "UserService": {
+            "BaseUrl": "http://localhost",
+            "Port": "5189",
+            "UsersEndpoint": "/api/users"
+        }
     }
 }
